--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SqlRecyclerView"
         tools:targetApi="31">
-        <activity android:name=".EditActivity"/>
+        <activity
+            android:name=".EditActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ContactDetails"
+            android:exported="false"
+             />
+        <activity
+            android:name=".CreateActivity"
+            android:exported="false"
+            />
         <activity
             android:name=".MainActivity"
             android:exported="true">
